2006-03-21  Adam Piatyszek  <ediap@users.sourceforge.net>

	* Moved signal processing related sources to a separate "signal"
	subdirectory. Test programs updated accordingly. Please note that
	now <itpp/itbase.h> is not included automatically in "itcomm.h",
	"itfixed.h", "itprotocol.h", "itsignal.h" and "itsrccode.h".

2006-03-20  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac, doc/Makefile.am, itpp/Makefile.am,
	itpp/signal/Makefile.am, itpp/signal/sources.mk: Added signal
	subdirectory and modified make files for a new signal processing
	module.

2006-03-19  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac: Version numbers updated.

	* Renamed `fixedpoint' subdirectory into `fixed'. 

	* doc/local/index.doc.in: Changed CVS related links to SVN ones
	(merged rev. 361:372 from itpp-3-10 branch).

2006-03-17  Adam Piatyszek  <ediap@users.sourceforge.net>

	* CVS->SVN repository conversion.

2006-03-16  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/modulator_nd_test.cpp: Fixed minor bug with namespace and
	cerr (merged from itpp-3-10-branch). 

	* itpp/protocol/selective_repeat.cpp: Fixed improper logical check
	in the `it_assert' macro (merged from itpp-3-10-branch).

	* itpp/base/scalfunc.h: Added `#include <limits>', which solves
	compilation problems using MSVC++ .NET 2005 (merged from
	itpp-3-10-branch).

	* AUTHORS: Updated to reflect recent staff changes (merged from
	itpp-3-10-branch).

	* Created CVS branch `itpp-3-10-branch' for bug-fixes in this
	release. 

==============================================================================

2006-03-15  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 3.10.0 released (CVS tag: release-3-10-0)

	* configure.ac: Cosmetic changes in CXXFLAGS settings.

	* doc/doxygen_html.cfg.in, itpp/base/binary.h,
	itpp/base/binfile.cpp, itpp/base/converters.cpp,
	itpp/base/converters.h, itpp/base/mat.cpp, itpp/base/mat.h,
	itpp/base/parser.cpp, itpp/base/sigfun.h, itpp/base/vec.cpp,