@@ -38,3 +38,94 @@ norm(A) = 3.87468
 norm(A, 2) = 3.87468
 norm(A, 1) = 7.35535
 norm(A, "fro") = 5.56564
+
+=======================
+    Histogram tests    
+=======================
+
+Experimental PDF of 100x100 normal distributed random matrix:
+
+  bin | count |     PDF |
+------+-------+---------+-------------------------------------------
+ -3.0 |    20 | 0.00200 | 
+ -2.7 |    28 | 0.00280 | 
+ -2.4 |    71 | 0.00710 | **
+ -2.1 |   139 | 0.01390 | ****
+ -1.8 |   243 | 0.02430 | ********
+ -1.5 |   355 | 0.03550 | ************
+ -1.2 |   582 | 0.05820 | *******************
+ -0.9 |   786 | 0.07860 | **************************
+ -0.6 |  1013 | 0.10130 | **********************************
+ -0.3 |  1137 | 0.11370 | **************************************
+  0.0 |  1179 | 0.11790 | ****************************************
+  0.3 |  1084 | 0.10840 | ************************************
+  0.6 |  1057 | 0.10570 | ***********************************
+  0.9 |   831 | 0.08310 | ****************************
+  1.2 |   597 | 0.05970 | ********************
+  1.5 |   363 | 0.03630 | ************
+  1.8 |   257 | 0.02570 | ********
+  2.1 |   126 | 0.01260 | ****
+  2.4 |    72 | 0.00720 | **
+  2.7 |    33 | 0.00330 | *
+  3.0 |    27 | 0.00270 | 
+------+-------+---------+-------------------------------------------
+Histogram trials counter  : 10000
+Sum of the histogram bins : 10000
+Sum of PDF values         : 1.00000
+--------------------------------------------------------------------
+
+Experimental PDF of 50000 normal distributed random variables:
+
+  bin | count |     PDF |
+------+-------+---------+-------------------------------------------
+ -3.0 |   119 | 0.00238 | 
+ -2.7 |   186 | 0.00372 | *
+ -2.4 |   355 | 0.00710 | **
+ -2.1 |   679 | 0.01358 | ****
+ -1.8 |  1193 | 0.02386 | *******
+ -1.5 |  1948 | 0.03896 | ************
+ -1.2 |  2823 | 0.05646 | ******************
+ -0.9 |  3918 | 0.07836 | *************************
+ -0.6 |  5058 | 0.10116 | *********************************
+ -0.3 |  5785 | 0.11570 | **************************************
+  0.0 |  6072 | 0.12144 | ****************************************
+  0.3 |  5676 | 0.11352 | *************************************
+  0.6 |  4958 | 0.09916 | ********************************
+  0.9 |  3896 | 0.07792 | *************************
+  1.2 |  2952 | 0.05904 | *******************
+  1.5 |  1922 | 0.03844 | ************
+  1.8 |  1185 | 0.02370 | *******
+  2.1 |   640 | 0.01280 | ****
+  2.4 |   358 | 0.00716 | **
+  2.7 |   160 | 0.00320 | *
+  3.0 |   117 | 0.00234 | 
+------+-------+---------+-------------------------------------------
+Histogram trials counter  : 50000
+Sum of the histogram bins : 50000
+Sum of PDF values         : 1.00000
+--------------------------------------------------------------------
+
+Experimental CDF (CDF(x) = Pr(a < x), a - random variable) 
+of the same vector:
+
+CDF(-2.85) = 0.0024
+CDF(-2.55) = 0.0061
+CDF(-2.25) = 0.0132
+CDF(-1.95) = 0.0268
+CDF(-1.65) = 0.0506
+CDF(-1.35) = 0.0896
+CDF(-1.05) = 0.1461
+CDF(-0.75) = 0.2244
+CDF(-0.45) = 0.3256
+CDF(-0.15) = 0.4413
+CDF( 0.15) = 0.5627
+CDF( 0.45) = 0.6762
+CDF( 0.75) = 0.7754
+CDF( 1.05) = 0.8533
+CDF( 1.35) = 0.9124
+CDF( 1.65) = 0.9508
+CDF( 1.95) = 0.9745
+CDF( 2.25) = 0.9873
+CDF( 2.55) = 0.9945
+CDF( 2.85) = 0.9977
+CDF( 3.15) = 1.0000
